src/test/ui/span/slice-borrow.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/slice-borrow.rs:18:5
   |
16 |         let x: &[isize] = &vec![1, 2, 3, 4, 5];
   |                            ------------------- temporary value created here
17 |         y = &x[1..];
18 |     } //~ ERROR does not live long enough
   |     ^ temporary value dropped here while still borrowed
19 | }
   | - temporary value needs to live until here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

